tests/error/type_errors/binary_not_arith_right.py
from tests.error.util import guppy


@guppy
def foo(x: int) -> int:
    return x + True
